<resources>
    <string name="app_name">CD</string>
    <string name="title"> COMPUTER DETAIL SHOP</string>
    //txt loading
    <string name="txt_load">Welcome to CD Shop</string>

    //txt form
    <string name="user">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="signUp">SIGN UP</string>
    <string name="txt_login">Login</string>
    <string name="txt_signup">Sign Up</string>
    <string name="not_acc">Don`t have account?</string>
    <string name="have_acc">You already have an account?</string>
    <string name="title_login">Please login to continue using our app</string>
    <string name="title_signup">Please registration with email and sign up to continue using our app</string>
    <string name="txt_social">Enter via Social Networks</string>
    <string name="txt_or">login with email</string>

    //bottom navigation
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="setting">Setting</string>

    // text product
    <string name="txt_model">ASUS</string>

    //text btn
    <string name="btn_cart">ADD TO CART</string>
    <string name="btn_buy">Buy Now</string>

    <string name="acc_setting">Account Settings</string>
    <string name="language">Language</string>
    <string name="aoo_setting">App Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>


</resources>