<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_login"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:textSize="16dp"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/login"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_or"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="8dp"
                android:inputType="text"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginBottom="2dp"
                />
            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
            <View
                android:layout_width="wrap_content"
                android:layout_height="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="8dp"/>
              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="60dp"
                  app:cardCornerRadius="16dp"
                  android:backgroundTint="@color/bg_btn"
                  android:background="@drawable/custom_btn"
                  android:layout_gravity="center"
                  >
                  <TextView
                      android:id="@+id/btnLogin"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:text="@string/login"
                      android:gravity="center"
                      android:textSize="18dp"
                      android:textStyle="bold"
                      android:textColor="@color/white"
                      />
              </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_acc"
                android:textColor="@color/black"/>

            <View
                android:layout_width="8dp"
                android:layout_height="0dp"/>
            <TextView
                android:id="@+id/signInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_signup"
                android:textColor="@color/black"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_social"
            android:textSize="16dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:orientation="horizontal"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/facebook"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/grey_font"
                app:cardCornerRadius="64dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Facebook"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginRight="16dp"
                    />
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/facebook"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="8dp"
                    />
            </androidx.cardview.widget.CardView>
            <View
                android:layout_width="16dp"
                android:layout_height="0dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/google"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/grey_font"
                app:cardCornerRadius="64dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:text="Google"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>