<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_back"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/pic"
        android:layout_below="@id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/imageUrl"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@drawable/asus" />
        <TextView
            android:id="@+id/txtProduct"
            android:layout_below="@id/imageUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txt_model"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/txtFullDescription"
        android:layout_below="@id/pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/txtModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Model"
            android:paddingStart="32dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/black"
            />

        <RelativeLayout
            android:id="@+id/model"
            android:layout_below="@id/txtModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ASUS GAMMING"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                />

        </RelativeLayout>
        <TextView
            android:id="@+id/txtDescription"
            android:layout_below="@id/model"
            android:paddingStart="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18dp"/>
        <RelativeLayout
            android:id="@+id/description"
            android:layout_below="@id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/txtLineOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp"
                android:text="12th Intel® Core™ i5 processor 8 GB memory 512 GB SSD storage" />

            <TextView
                android:id="@+id/txtLineTwo"
                android:layout_below="@id/txtLineOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:text="Windows 11 Home in S Mode - ASUS recommends Windows 11 Pro for business, Free Upgrade to Windows 11¹ (when available, see below)"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtFullDescription"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn"
            android:text="@string/btn_cart"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_buy"
            android:text="@string/btn_buy"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>
</RelativeLayout>