<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:layout_width="match_parent"
        android:layout_height="32dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:id="@+id/card1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/default_avatar" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"/>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/myAccount"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="?attr/selectableItemBackground">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_single_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#031161"
                    android:backgroundTintMode="add"
                    android:src="@drawable/account4" />

                <TextView
                    android:id="@+id/user_single_name"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/user_single_image"

                    android:text="Account Settings"
                    android:textColor="#031161"
                    android:textSize="16dp" />

                <View
                    android:layout_width="290dp"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="100dp"
                    android:background="@color/grey" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/language"
                android:background="?attr/selectableItemBackground">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/icLanguage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:backgroundTint="#031161"
                    android:backgroundTintMode="add"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/ic_language" />
                <TextView
                    android:id="@+id/txtLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@+id/icLanguage"
                    android:text="@string/language"
                    android:layout_centerVertical="true"
                    android:textColor="#031161"
                    android:textSize="16dp" />
                <View
                    android:layout_width="290dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="100dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/grey" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/appSettings"

                android:background="?attr/selectableItemBackground">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_single_image3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:backgroundTint="#031161"
                    android:backgroundTintMode="add"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/app4" />
                <TextView
                    android:id="@+id/user_single_name3"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@+id/user_single_image3"
                    android:text="App Settings"
                    android:layout_centerVertical="true"
                    android:textColor="#031161"
                    android:textSize="16dp" />
                <View
                    android:layout_width="290dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="100dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/grey" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/help"
                android:background="?attr/selectableItemBackground">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_single_image4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:backgroundTint="#031161"
                    android:backgroundTintMode="add"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/ic_help" />
                <TextView
                    android:id="@+id/user_single_name4"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@+id/user_single_image4"
                    android:text="@string/help"
                    android:layout_centerVertical="true"
                    android:textColor="#031161"
                    android:textSize="16dp" />
                <View
                    android:layout_width="290dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="100dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/grey" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/logout"
                android:background="?attr/selectableItemBackground">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_single_image2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"

                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/logout3" />

                <TextView
                    android:id="@+id/user_single_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@+id/user_single_image2"
                    android:text="Logout"
                    android:layout_centerVertical="true"
                    android:textColor="#031161"
                    android:textSize="16dp" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>